Change back to maximum scale instead of minimum scale and add max-width and overflow to html and body to try to fix the mobile zoom in issue

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -14,3 +14,8 @@ html {
 .hidden {
   display:none
 }
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
